tdf#119557 style hierarchy isn't stable so looping check fails falsely

Given the css stuff a given style can end up with itself as a grandparent but
then the css mutates things so it doesn't loop around to give itself as a
grandgrandparent.

So undo the loop detection check and turn it into a parse depth test
instead with an arbitrary, but high, level

Change-Id: If28684ad2b2adc664bc2da6b176b93248b377162
Reviewed-on: https://gerrit.libreoffice.org/59813
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>